--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <p>Herkes İçin Temel Dersler</p>
 
 <h2>Devam Ettiğim Patikalar</h2>
-<!-- hedefler önemli! -->
+hedefler önemli!
 <h3>Başlangıç Seviye Front-End Web Development Patikası</h3>
 <p>Aslında bu patikaya başlamadan önce çokça araştırma yaptım ve acele etmemeye çalıştım. Bu yola çıkmış insanların tecrübelerinden bolca faydalanmaya çalıştım. Ardından yapılan bir değişimin direkt karşılığı olması ve kendimce diğer konulardan daha zevkli bulduğum için Front-End patikasına başlayıp bu yolda ilerlemeye karar verdim.</p>
 <h3>Hi-Kod Patikası</h3>
